--- a/app/views/purecolle/index.html.erb
+++ b/app/views/purecolle/index.html.erb
@@ -1,9 +1,9 @@
 <%= render 'shared/nav' %>
 
 <main>
-    <div class="row col-sm-12 col-sm-8" style="float: left;">
-        <div style="margin: 0 15px;">
-            <div class="card medium hoverable col s4 card-margin col-sm-6">
+    <div class="row col-sm-12">
+        <div class="card-margin col s4 col-sm-6" style="margin: 0 15px; float:left;">
+            <div class="card medium hoverable">
                 <a href="http://anichil.com/archives/1070252769.html" target="_blank" class="test">
                     <div class="card-image waves-effect waves-block waves-light">
                         <%= image_tag 'article/img/test1.jpg', :alt=>'画像13', :class=>'activator' %>
@@ -18,8 +18,8 @@
                 </a>
             </div>
         </div>
-        <div style="margin: 0 15px;">
-            <div class="card medium hoverable col s4 card-margin col-sm-6">
+        <div class="card-margin col s4 col-sm-6" style="margin: 0 15px;">
+            <div class="card medium hoverable">
                 <a href="http://anicobin.ldblog.jp/archives/53190201.html" target="_blank" class="test">
                     <div class="card-image waves-effect waves-block waves-light">
                         <%= image_tag 'article/img/test2.jpg', :alt=>'画像13', :class=>'activator' %>
@@ -34,149 +34,170 @@
                 </a>
             </div>
         </div>
-        <div class="card medium hoverable col s4 card-margin col-sm-6">
-            <a href="http://aaieba.livedoor.biz/archives/53146411.html" target="_blank" class="test">
-                <div class="card-image waves-effect waves-block waves-light">
-                    <%= image_tag 'article/img/test3.jpg', :alt=>'画像13', :class=>'activator' %>
-                    <div class="img-top-triangle"></div>
-                </div>
-                <div class="card-content">
-                    <p>プリキュア映画最新作に初代プリキュアが登場ｗｗｗｗｗｗｗｗｗ</p>
-                </div>
-                <div class="card-action">
-                    <a href="http://aaieba.livedoor.biz/" target="_blank">ああ言えばForYou</a>
-                </div>
-            </a>
+        <div class="card-margin col s4 col-sm-6" style="margin: 0 15px;">
+            <div class="card medium hoverable">
+                <a href="http://aaieba.livedoor.biz/archives/53146411.html" target="_blank" class="test">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <%= image_tag 'article/img/test3.jpg', :alt=>'画像13', :class=>'activator' %>
+                        <div class="img-top-triangle"></div>
+                    </div>
+                    <div class="card-content">
+                        <p>プリキュア映画最新作に初代プリキュアが登場ｗｗｗｗｗｗｗｗｗ</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="http://aaieba.livedoor.biz/" target="_blank">ああ言えばForYou</a>
+                    </div>
+                </a>
+            </div>
         </div>
-        <div class="card medium hoverable col s4 card-margin col-sm-6">
-            <a href="http://nizigami.com/archives/51700244.html" target="_blank" class="test">
-                <div class="card-image waves-effect waves-block waves-light">
-                    <%= image_tag 'article/img/test13.jpg', :alt=>'画像13', :class=>'activator' %>
-                    <div class="img-top-triangle"></div>
-                </div>
-                <div class="card-content">
-                    <p>プリキュアに5000円で手でしてくれるか聞いた時の反応ｗｗｗｗｗｗｗ</p>
-                </div>
-                <div class="card-action">
-                    <a href="http://nizigami.com/" target="_blank">虹神速報-にじそく</a>
-                </div>
-            </a>
+        <div class="card-margin col s4 col-sm-6" style="margin: 0 15px;">
+            <div class="card medium hoverable">
+                <a href="http://nizigami.com/archives/51700244.html" target="_blank" class="test">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <%= image_tag 'article/img/test13.jpg', :alt=>'画像13', :class=>'activator' %>
+                        <div class="img-top-triangle"></div>
+                    </div>
+                    <div class="card-content">
+                        <p>プリキュアに5000円で手でしてくれるか聞いた時の反応ｗｗｗｗｗｗｗ</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="http://nizigami.com/" target="_blank">虹神速報-にじそく</a>
+                    </div>
+                </a>
+            </div>
         </div>
-        <div class="card medium hoverable col s4 card-margin col-sm-6">
-            <a href="http://anicobin.ldblog.jp/archives/53233130.html" target="_blank" class="test">
-                <div class="card-image waves-effect waves-block waves-light">
-                    <%= image_tag 'article/img/test4.jpg', :alt=>'画像4', :class=>'activator' %>
-                    <div class="img-top-triangle"></div>
-                </div>
-                <div class="card-content">
-                    <p>【HUGっと！プリキュア】第9話 感想 話の展開がぶっとびー</p>
-                </div>
-                <div class="card-action">
-                    <a href="http://anicobin.ldblog.jp/" target="_blank">あにこ便</a>
-                </div>
-            </a>
+        <div class="card-margin col s4 col-sm-6" style="margin: 0 15px;">
+            <div class="card medium hoverable">
+                <a href="http://anicobin.ldblog.jp/archives/53233130.html" target="_blank" class="test">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <%= image_tag 'article/img/test4.jpg', :alt=>'画像4', :class=>'activator' %>
+                        <div class="img-top-triangle"></div>
+                    </div>
+                    <div class="card-content">
+                        <p>【HUGっと！プリキュア】第9話 感想 話の展開がぶっとびー</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="http://anicobin.ldblog.jp/" target="_blank">あにこ便</a>
+                    </div>
+                </a>
+            </div>
         </div>
-        <div class="card medium hoverable col s4 card-margin col-sm-6">
-            <a href="http://aaieba.livedoor.biz/archives/53233533.html" target="_blank" class="test">
-                <div class="card-image waves-effect waves-block waves-light">
-                    <%= image_tag 'article/img/test5.jpg', :alt=>'画像4', :class=>'activator' %>
-                    <div class="img-top-triangle"></div>
-                </div>
-                <div class="card-content">
-                    <p>ドラゴンボール超の孫悟空とプリキュアが夢の共演ｗｗｗｗｗｗｗｗｗ</p>
-                </div>
-                <div class="card-action">
-                    <a href="http://aaieba.livedoor.biz/" target="_blank">ああ言えばForYou</a>
-                </div>
-            </a>
+        <div class="card-margin col s4 col-sm-6" style="margin: 0 15px;">
+            <div class="card medium hoverable">
+                <a href="http://aaieba.livedoor.biz/archives/53233533.html" target="_blank" class="test">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <%= image_tag 'article/img/test5.jpg', :alt=>'画像4', :class=>'activator' %>
+                        <div class="img-top-triangle"></div>
+                    </div>
+                    <div class="card-content">
+                        <p>ドラゴンボール超の孫悟空とプリキュアが夢の共演ｗｗｗｗｗｗｗｗｗ</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="http://aaieba.livedoor.biz/" target="_blank">ああ言えばForYou</a>
+                    </div>
+                </a>
+            </div>
         </div>
-        <div class="card medium hoverable col s4 card-margin col-sm-6">
-            <a href="http://anichil.com/archives/1070252769.html" target="_blank" class="test">
-                <div class="card-image waves-effect waves-block waves-light">
-                    <%= image_tag 'article/img/test1.jpg', :alt=>'画像13', :class=>'activator' %>
-                    <div class="img-top-triangle"></div>
-                </div>
-                <div class="card-content">
-                    <p>独身男性が1人でプリキュア映画見に行くのってキモい？</p>
-                </div>
-                <div class="card-action">
-                    <a href="http://anichil.com/" target="_blank">あにちる速報</a>
-                </div>
-            </a>
+        <div class="card-margin col s4 col-sm-6" style="margin: 0 15px;">
+            <div class="card medium hoverable">
+                <a href="http://anichil.com/archives/1070252769.html" target="_blank" class="test">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <%= image_tag 'article/img/test1.jpg', :alt=>'画像13', :class=>'activator' %>
+                        <div class="img-top-triangle"></div>
+                    </div>
+                    <div class="card-content">
+                        <p>独身男性が1人でプリキュア映画見に行くのってキモい？</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="http://anichil.com/" target="_blank">あにちる速報</a>
+                    </div>
+                </a>
+            </div>
         </div>
-        <div class="card medium hoverable col s4 card-margin col-sm-6">
-            <a href="http://anicobin.ldblog.jp/archives/53190201.html" target="_blank" class="test">
-                <div class="card-image waves-effect waves-block waves-light">
-                    <%= image_tag 'article/img/test2.jpg', :alt=>'画像13', :class=>'activator' %>
-                    <div class="img-top-triangle"></div>
-                </div>
-                <div class="card-content">
-                    <p>【HUGっと！プリキュア】第8話 感想 這いよる王子様</p>
-                </div>
-                <div class="card-action">
-                    <a href="http://anicobin.ldblog.jp/" target="_blank">虹神速報-にじそく</a>
-                </div>
-            </a>
+        <div class="card-margin col s4 col-sm-6" style="margin: 0 15px;">
+            <div class="card medium hoverable">
+                <a href="http://anicobin.ldblog.jp/archives/53190201.html" target="_blank" class="test">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <%= image_tag 'article/img/test2.jpg', :alt=>'画像13', :class=>'activator' %>
+                        <div class="img-top-triangle"></div>
+                    </div>
+                    <div class="card-content">
+                        <p>【HUGっと！プリキュア】第8話 感想 這いよる王子様</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="http://anicobin.ldblog.jp/" target="_blank">虹神速報-にじそく</a>
+                    </div>
+                </a>
+            </div>
         </div>
-        <div class="card medium hoverable col s4 card-margin col-sm-6">
-            <a href="http://aaieba.livedoor.biz/archives/53146411.html" target="_blank" class="test">
-                <div class="card-image waves-effect waves-block waves-light">
-                    <%= image_tag 'article/img/test3.jpg', :alt=>'画像13', :class=>'activator' %>
-                    <div class="img-top-triangle"></div>
-                </div>
-                <div class="card-content">
-                    <p>プリキュア映画最新作に初代プリキュアが登場ｗｗｗｗｗｗｗｗｗ</p>
-                </div>
-                <div class="card-action">
-                    <a href="http://aaieba.livedoor.biz/" target="_blank">ああ言えばForYou</a>
-                </div>
-            </a>
+        <div class="card-margin col s4 col-sm-6" style="margin: 0 15px;">
+            <div class="card medium hoverable">
+                <a href="http://aaieba.livedoor.biz/archives/53146411.html" target="_blank" class="test">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <%= image_tag 'article/img/test3.jpg', :alt=>'画像13', :class=>'activator' %>
+                        <div class="img-top-triangle"></div>
+                    </div>
+                    <div class="card-content">
+                        <p>プリキュア映画最新作に初代プリキュアが登場ｗｗｗｗｗｗｗｗｗ</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="http://aaieba.livedoor.biz/" target="_blank">ああ言えばForYou</a>
+                    </div>
+                </a>
+            </div>
         </div>
-        <div class="card medium hoverable col s4 card-margin col-sm-6">
-            <a href="http://nizigami.com/archives/51700244.html" target="_blank" class="test">
-                <div class="card-image waves-effect waves-block waves-light">
-                    <%= image_tag 'article/img/test13.jpg', :alt=>'画像13', :class=>'activator' %>
-                    <div class="img-top-triangle"></div>
-                </div>
-                <div class="card-content">
-                    <p>プリキュアに5000円で手でしてくれるか聞いた時の反応ｗｗｗｗｗｗｗ</p>
-                </div>
-                <div class="card-action">
-                    <a href="http://nizigami.com/" target="_blank">虹神速報-にじそく</a>
-                </div>
-            </a>
+        <div class="card-margin col s4 col-sm-6" style="margin: 0 15px;">
+            <div class="card medium hoverable">
+                <a href="http://nizigami.com/archives/51700244.html" target="_blank" class="test">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <%= image_tag 'article/img/test13.jpg', :alt=>'画像13', :class=>'activator' %>
+                        <div class="img-top-triangle"></div>
+                    </div>
+                    <div class="card-content">
+                        <p>プリキュアに5000円で手でしてくれるか聞いた時の反応ｗｗｗｗｗｗｗ</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="http://nizigami.com/" target="_blank">虹神速報-にじそく</a>
+                    </div>
+                </a>
+            </div>
         </div>
-        <div class="card medium hoverable col s4 card-margin col-sm-6">
-            <a href="http://anicobin.ldblog.jp/archives/53233130.html" target="_blank" class="test">
-                <div class="card-image waves-effect waves-block waves-light">
-                    <%= image_tag 'article/img/test4.jpg', :alt=>'画像4', :class=>'activator' %>
-                    <div class="img-top-triangle"></div>
-                </div>
-                <div class="card-content">
-                    <p>【HUGっと！プリキュア】第9話 感想 話の展開がぶっとびー</p>
-                </div>
-                <div class="card-action">
-                    <a href="http://anicobin.ldblog.jp/" target="_blank">あにこ便</a>
-                </div>
-            </a>
+        <div class="card-margin col s4 col-sm-6" style="margin: 0 15px;">
+            <div class="card medium hoverable">
+                <a href="http://anicobin.ldblog.jp/archives/53233130.html" target="_blank" class="test">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <%= image_tag 'article/img/test4.jpg', :alt=>'画像4', :class=>'activator' %>
+                        <div class="img-top-triangle"></div>
+                    </div>
+                    <div class="card-content">
+                        <p>【HUGっと！プリキュア】第9話 感想 話の展開がぶっとびー</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="http://anicobin.ldblog.jp/" target="_blank">あにこ便</a>
+                    </div>
+                </a>
+            </div>
         </div>
-        <div class="card medium hoverable col s4 card-margin col-sm-6">
-            <a href="http://aaieba.livedoor.biz/archives/53233533.html" target="_blank" class="test">
-                <div class="card-image waves-effect waves-block waves-light">
-                    <%= image_tag 'article/img/test5.jpg', :alt=>'画像4', :class=>'activator' %>
-                    <div class="img-top-triangle"></div>
-                </div>
-                <div class="card-content">
-                    <p>ドラゴンボール超の孫悟空とプリキュアが夢の共演ｗｗｗｗｗｗｗｗｗ</p>
-                </div>
-                <div class="card-action">
-                    <a href="http://aaieba.livedoor.biz/" target="_blank">ああ言えばForYou</a>
-                </div>
-            </a>
+        <div class="card-margin col s4 col-sm-6" style="margin: 0 15px;">
+            <div class="card medium hoverable">
+                <a href="http://aaieba.livedoor.biz/archives/53233533.html" target="_blank" class="test">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <%= image_tag 'article/img/test5.jpg', :alt=>'画像4', :class=>'activator' %>
+                        <div class="img-top-triangle"></div>
+                    </div>
+                    <div class="card-content">
+                        <p>ドラゴンボール超の孫悟空とプリキュアが夢の共演ｗｗｗｗｗｗｗｗｗ</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="http://aaieba.livedoor.biz/" target="_blank">ああ言えばForYou</a>
+                    </div>
+                </a>
+            </div>
         </div>
-    </div>
 
-    <%= render 'shared/timeline'%>
+        <%= render 'shared/timeline'%>
+
+    </div>
 
 </main>
 
