--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -27,11 +27,14 @@
     .col-sm-12 {
         width: 100%;
     }
+    .col-sm-9 {
+        width: 100% !important;
+    }
     .card {
         max-width: 323px;
         min-height: 323px !important;
     }
-    .scroll-up {
+    .hidden_scroll {
         display: none !important;
     }
 }
@@ -49,10 +52,9 @@
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
 }
 .sizing_tl {
-    width: 20%; 
-    float: left; 
-    margin-top: 80px !important; 
-    margin-left: -50px !important;
+    position: fixed;
+    margin-top: 8px !important; 
+    /* margin-left: -50px !important; */
 }
 /* main */
 .img-top-triangle {
