--- a/app/views/shared/_timeline.html.erb
+++ b/app/views/shared/_timeline.html.erb
@@ -1,11 +1,11 @@
-<div class="row hidden_tl sizing_tl shadow_tl">
+<div class="hidden_tl sizing_tl shadow_tl">
     <a 
         class="twitter-timeline" 
         href="https://twitter.com/search?q=%23precure%20OR%20%E3%83%97%E3%83%AA%E3%82%AD%E3%83%A5%E3%82%A2%20OR%20%E3%83%8F%E3%82%B0%E3%83%97%E3%83%AA" 
         data-widget-id="982648103302909954"
         data-chrome="nofooter" 
-        width="380px"
-        height="500px">#precure OR プリキュア OR ハグプリに関するツイート
+        width="400px"
+        height="600px">#precure OR プリキュア OR ハグプリに関するツイート
     </a>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
