--- a/app/views/shared/_scroll.html.erb
+++ b/app/views/shared/_scroll.html.erb
@@ -1,3 +1,3 @@
-<div class="scroll-up">
+<div class="scroll-up hidden_scroll">
   <a href="#"><i class="fas fa-arrow-circle-up fa-4x sc-pink"></i></a>
 </div>
