--- a/app/views/purecolle/index.html.erb
+++ b/app/views/purecolle/index.html.erb
@@ -12,7 +12,9 @@
 }
 </style>
 
-<%= render 'shared/nav' %>
+<header>
+    <%= render 'shared/nav' %>
+</header>
 
 <main>
     <div class="row col-sm-12">
